# OOP

./: .gitignore  BazaDan.txt  BazaDan2.txt  BazaDan3.txt  BazaDan4.txt  BazaDan5.txt  BazaDan6.txt  BazaDan7.txt  CMakeLists.txt  OOP.sln  TextFile1.txt  TextFile10.txt  TextFile11.txt  TextFile12.txt  TextFile2.txt  TextFile3.txt  TextFile4.txt  TextFile5.txt  TextFile6.txt  TextFile7.txt  TextFile8.txt  TextFile9.txt
Car/: Car.cpp  Car.h  Car.vcxproj  Car.vcxproj.filters  CarController.cpp  CarController.h  main.cpp
Crypt/: Crypt.cpp  Crypt.vcxproj  Crypt.vcxproj.filters  test.bat
Date/: Date.cpp  Date.h  Date.natvis  Date.vcxproj  Date.vcxproj.filters  DateConstants.hpp  main.cpp
Dictionary/: Dictionary.cpp  Dictionary.h  DictionaryMap.vcxproj  dictionary.txt  main.cpp
DictionaryMap/: DictionaryMap.cpp  DictionaryMap.h  DictionaryMap.vcxproj  DictionaryMap.vcxproj.filters  dictionary.txt  main.cpp
Fill/: Fill.cpp  Fill.vcxproj  Fill.vcxproj.filters  in.txt  out.txt  test.bat
Fill/test-data/: 101-chars-wall-out.txt  101-chars-wall.txt  invalid-char.txt  one-start-out.txt  start-only-out.txt  two-fill-areas-out.txt  two-fill-areas.txt  two-starts-out.txt  two-starts.txt  usage-hint.txt
FindMaxEx/: FindMaxEx.hpp  FindMaxEx.vcxproj  FindMaxEx.vcxproj.filters  main.cpp
GeneratePrimeNumbers/: GeneratePrimeNumbers.cpp  GeneratePrimeNumbers.h  GeneratePrimeNumbersSet.vcxproj  GeneratePrimeNumbersSet.vcxproj.filters  Timer.h  main.cpp
GeneratePrimeNumbersSet/: GeneratePrimeNumbersSet.cpp  GeneratePrimeNumbersSet.h  GeneratePrimeNumbersSet.vcxproj  GeneratePrimeNumbersSet.vcxproj.filters
HtmlDecode/: HtmlDecode.cpp  HtmlDecode.h  String.vcxproj  String.vcxproj.filters  main.cpp
HttpUrl/: HttpUrl.cpp  HttpUrl.h  HttpUrl.vcxproj  HttpUrl.vcxproj.filters  Protocol.cpp  Protocol.h  UrlParsingError.hpp  main.cpp
Invert/: 2  Invert.cpp  Invert.vcxproj  Invert.vcxproj.filters  test.bat
Invert/test-data/: invalid-NaN.txt  invalid-overflow.txt  invalid-wrong-cols.txt  invertable-out.txt  usage-hint.txt
MyString/: ContainerBase.hpp  MyString.vcxproj  MyString.vcxproj.filters  String.cpp  String.h  String.natvis  main.cpp
MyVector/: Allocator.hpp  ContainerBase.hpp  ContainerBase.natvis  Iteratable.hpp  MyVector.vcxproj  MyVector.vcxproj.filters  Vector.hpp  Vector.natvis  main.cpp
ParseUrl/: ParseUrl.cpp  ParseUrl.h  ParseUrl.vcxproj  main.cpp
Radix/: 1  Radix.cpp  radix.vcxproj  radix.vcxproj.filters  test.bat
Replace/: Replace.cpp  Replace.vcxproj  Replace.vcxproj.filters  test.bat
Replace/test-data/: mama-replace-ma-with-mama.txt  numbers-replace-1231234-with-rep.txt
Shapes/: BaseShape.cpp  BaseShape.h  BaseSolidShape.cpp  BaseSolidShape.h  Canvas.cpp  Canvas.h  Circle.cpp  Circle.h  Color.cpp  Color.h  ICanvas.h  ICanvasDrawable.h  IShape.h  ISolidShape.h  LineSegment.cpp  LineSegment.h  MockCanvas.cpp  MockCanvas.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  ShapeParser.cpp  ShapeParser.h  Shapes.txt  Shapes.vcxproj  Shapes.vcxproj.filters  Triangle.cpp  Triangle.h  Utility.cpp  Utility.h  main.cpp
StringList/: Iteratable.hpp  List.h  List.hpp  List.natvis  ListIterator.hpp  StringList.h  StringList.vcxproj  StringList.vcxproj.filters  main.cpp
Vector/: Vector.vcxproj  Vector.vcxproj.filters  VectorProcessor.cpp  VectorProcessor.h  main.cpp
Vehicle/: CarImpl.hpp  IAvailableVehicle.h  IBaseVehicle.h  ICar.h  IPerson.h  IVehicle.h  Person.hpp  PersonImpl.hpp  PoliceMan.hpp  Racer.hpp  Vehicle.hpp  Vehicle.vcxproj  Vehicle.vcxproj.filters  VehicleImpl.hpp  main.cpp
catch2/: CMakeLists.txt  catch2.cpp  catch2.h  test_car.cpp  test_date.cpp  test_dictionary.cpp  test_find_max_ex.cpp  test_generate_primes.cpp  test_html_decode.cpp  test_http_url.cpp  test_my_string.cpp  test_my_vector.cpp  test_parse_url.cpp  test_shapes.cpp  test_string_list.cpp  test_vector.cpp
